# cond-ad-hyperspherical-compressed-vae

./: .gitignore  BEFORE_PUBLIC_RELEASE.md  CHANGELOG.md  CHECKSUMS.sha256  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
checkpoints/: README.md  cifar10_full_compression_z128_ec126.pt
compressed_vae/: __init__.py  coordinates.py  evaluate.py  metrics.py  visualization.py
configs/: cifar10_cifar100_full.yaml  cifar10_cifar100_vmf.yaml
docs/: implementation_notes.md  method.md  paper.bib  provenance.md  reproduction.md
results/: README.md
results/reference/cifar10_vs_cifar100/: hyperparameters_original.txt  metrics.json  scores.npz
scripts/: evaluate_standard.sh  reproduce_cifar10_vs_cifar100.sh  verify_archived_result.py
scripts/compressed_vae/: data.py  losses.py  model.py  utils.py
src/compressed_vae/: data.py  train.py  visualization.py
tests/: test_checkpoint.py  test_coordinates.py  test_losses.py  test_metrics.py  test_model.py
