[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperspherical-compressed-vae"
version = "0.1.0"
description = "Hyperspherical latent-volume compression for VAE anomaly and OOD detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Alejandro Ascarate"},
  {name = "Leo Lebrat"},
  {name = "Rodrigo Santa Cruz"},
  {name = "Clinton Fookes"},
  {name = "Olivier Salvado"},
]
keywords = ["variational-autoencoder", "anomaly-detection", "out-of-distribution", "hyperspherical", "high-dimensional-statistics"]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
compvae-train = "compressed_vae.train:main"
compvae-evaluate = "compressed_vae.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
